# src/main/java/com/company/officecommute/dto/employee/request/EmployeeSaveRequest.java
@@ -40,6 +40,8 @@ public record EmployeeSaveRequest(
         @Size(min = 8, message = "비밀번호는 최소 8자 이상이어야 합니다.")
         String password,
 
-        Long teamId
+        Long teamId,
+
+        String timezone
 ) {
 }
